--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,15 @@ VITE_GEMINI_API_KEY=AIzaSyD5DKi5XHqJakjjZSqp8-5Z7ozptDtHxeg
 
 # CoinGecko API URL (free tier)
 VITE_COINGECKO_API_URL=https://api.coingecko.com/api/v3
+
+# Blockchain configuration
+VITE_IOTA_RPC_URL=https://json-rpc.evm.testnet.iotaledger.net
+VITE_IOTA_WS_URL=wss://ws.json-rpc.evm.testnet.iotaledger.net
+VITE_IOTA_CHAIN_ID=1075
+VITE_IOTA_EXPLORER_URL=https://explorer.evm.testnet.iotaledger.net
+
+# WalletConnect Project ID (get one from https://cloud.walletconnect.com)
+VITE_WALLET_CONNECT_PROJECT_ID=09fc7dba755d62670df0095c041ed441
+
+# Portfolio contract address (once deployed)
+VITE_PORTFOLIO_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
