--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@reown/appkit": "^1.7.3",
+    "@reown/appkit-adapter-wagmi": "^1.7.3",
     "@tanstack/react-query": "^5.56.2",
     "@types/react-helmet": "^6.1.11",
     "class-variance-authority": "^0.7.1",
@@ -62,6 +64,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
+    "viem": "^2.9.2",
+    "wagmi": "^2.5.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -76,7 +80,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
