--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@reown/appkit-adapter-wagmi": "^1.7.3",
     "@tanstack/react-query": "^5.56.2",
     "@types/react-helmet": "^6.1.11",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
