--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reown/appkit": "^1.7.3",
     "@reown/appkit-adapter-wagmi": "^1.7.3",
-    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query": "^5.75.1",
     "@types/react-helmet": "^6.1.11",
+    "@wagmi/core": "2.17.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -67,8 +68,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
-    "viem": "^2.9.2",
-    "wagmi": "^2.5.7",
+    "viem": "^2.28.3",
+    "wagmi": "^2.15.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
