--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reown/appkit": "^1.7.3",
     "@reown/appkit-adapter-wagmi": "^1.7.3",
+    "@reown/appkit-adapter-ethers": "^1.7.3",
     "@tanstack/react-query": "^5.75.1",
     "@types/react-helmet": "^6.1.11",
     "@wagmi/core": "2.17.0",
@@ -51,7 +52,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "ethers": "^5.7.2",
+    "ethers": "^6.13.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
